Fix dark theme color contrast for hover states

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,7 +37,7 @@ html[data-theme="DARK"] {
   --color-gray-50: #C0C0C0;
   --color-gray-90: #cfcfcf;
 
-  --primary-color: #ce4599;
+  --primary-color: #D35AA5;
   --secondary-color: #b2267c;
   --background-color: #1c1d22;
   --cta-background-color: #1a011342;
@@ -59,7 +59,7 @@ html[data-theme="DARK"] {
     --color-gray-50: #C0C0C0;
     --color-gray-90: #cfcfcf;
 
-    --primary-color: #ce4599;
+    --primary-color: #D35AA5;
     --secondary-color: #b2267c;
     --background-color: #1c1d22;
     --cta-background-color: #1a011342;
